fix display error with z-index
- suggestion list is behind input field "Number of Events" in mobile app

--- a/src/styling/city-search.css
+++ b/src/styling/city-search.css
@@ -31,6 +31,7 @@
     border-bottom-left-radius: 5px;
     position: absolute;
     margin-top: 0;
+    z-index: 99;
 }
 
 .suggestions:focus{
